<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.juniorkabore.filleul.Besoin">





    <TextView
        android:id="@+id/pageEtape2"
        style="@style/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/etape2" />

    <Button
        android:id="@+id/bouton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bouton"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:background="#90BDE9"
        android:onClick="ContinuerBesoin"/>

    <CheckBox
        android:id="@+id/integration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aideScolair"
        android:layout_centerVertical="true"
        android:text="@string/integration"/>

    <CheckBox
        android:id="@+id/aideScolair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/integration"
        android:layout_alignLeft="@+id/pageEtape2"
        android:layout_marginBottom="14dp"
        android:text="@string/aideScolaire" />

</RelativeLayout>
