<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.juniorkabore.filleul.Je_suis">



    <TextView
        android:id="@+id/pageEtape1"
        style="@style/intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/etape1" />


    <Button
        android:id="@+id/bouton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bouton"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:background="#90BDE9"/>

    <RadioGroup
        android:id="@+id/statut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pageEtape1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" >

        <RadioButton
            android:id="@+id/parrain1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="151dp"
            android:text="@string/parrain" />

        <RadioButton
            android:id="@+id/filleul1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filleul" />
    </RadioGroup>


</RelativeLayout>
