<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


        <com.facebook.login.widget.ProfilePictureView
            android:id="@+id/profilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="visible"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="16dp"/>


        <TextView
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:layout_toRightOf="@+id/profilePicture"
            android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/textStatut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textStatut"
        android:layout_below="@+id/Name"
        android:layout_toRightOf="@+id/profilePicture"
        android:layout_toEndOf="@+id/profilePicture" />

    <TextView
        android:id="@+id/textUniversiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/universiter"
        android:layout_below="@+id/textStatut"
        android:layout_toRightOf="@+id/profilePicture"
        android:layout_toEndOf="@+id/profilePicture" />



    </RelativeLayout>


    </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/addInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ici se trouvera le text que l'utilisateur entrera pour la publication."
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/cv" />


</RelativeLayout>



