<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">






    <ImageView
        android:id="@+id/logo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/logo"
        android:visibility="visible"
        android:layout_above="@+id/bouton1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp" />



    <com.facebook.login.widget.ProfilePictureView
        android:id="@+id/profilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/logo"
        android:layout_alignEnd="@+id/logo"
        android:layout_alignBottom="@+id/logo" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/intro3"
        android:layout_alignLeft="@+id/intro3"
        android:layout_alignStart="@+id/intro3">

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="#333"
            android:textSize="18sp" />



    </LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <Button
        android:id="@+id/bouton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#90BDE9"
        android:text="@string/BoutonContinu"
        android:textStyle="bold"
        android:layout_above="@+id/login_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/intro"
        style="@style/intro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/in1" />

    <TextView
        android:id="@+id/intro2"
        style="@style/intro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"
        android:text="@string/in2" />

    <TextView
        android:id="@+id/intro3"
        style="@style/intro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro2"
        android:layout_centerHorizontal="true"
        android:text="@string/in3" />


    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="email"
        android:textColor="#333"
        android:textSize="18sp"
        android:layout_below="@+id/profilePicture"
        android:layout_alignLeft="@+id/birthday"
        android:layout_alignStart="@+id/birthday"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="gender"
        android:textColor="#333"
        android:textSize="18sp"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/birthday"
        android:layout_alignLeft="@+id/birthday"
        android:layout_alignStart="@+id/birthday"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="birthday"
        android:textColor="#333"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/profilePicture"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>
</RelativeLayout>


